# Fast-Facts

./: LICENSE  README.md  main.py  pyproject.toml
data/: Fast Facts.xlsx - Sheet1.csv
static/: script.js  style.css
templates/: admin.html  index.html
