[tool.poetry]
name = "fast-facts"
version = "0.1.0"
description = "Science Olympiad Fast Facts practice"
authors = ["Sandhya Govindaraju <sandhya.govindaraju@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
Flask-WTF = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
